feat(server-express): get Tasks assigned to TaskList (#30)
* Check task list when creating a task

* Add Open API path

* Add integration tests

* Enhance repository

* Enhance domain service

* Implement API
